# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff_python_project/scripts/: gendiff.py
