[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Alexander Gidzenko <gidzenko@mail.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff_python_project" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.scripts]
gendiff = "gendiff-python-project.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
